[package]

name = "deuterium"
version = "0.4.0"
authors = ["Stanislav Panferov <fnight.m@gmail.com>"]
license = "MIT"
description = "Deuterium is a fancy SQL builder for Rust. It's designed to provide a DSL to easily build SQL queries in safe and *typed* way."
keywords = ["sql", "orm"]

[[test]]
name = "tests"

[features]
default = ["postgres"]

[dependencies]
# All of the below are the same as Postgres for compatibility reasons
uuid = "0.5"
time = "0.1.14"
rustc-serialize = "0.3"

[dependencies.postgres]
version = ">= 0.12.0" # for 'with-' features
features = ["with-uuid", "with-rustc-serialize", "with-time"]
optional = true